Converting project to cli

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 token.temp
 __pycache__
+pyraiders_settings.json
+pyraiders_accounts.json
 .pyraiders_settings.json
 .pyraiders_accounts.json
 .DS_Store
