--- a/ config.json
+++ b/ config.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.25.0-alpha",
+    "version": "0.26.0-alpha",
     "name": "PyRaiders",
     "author": "HeartBreak-One",
     "description": "SR assistant for viewers written in Python",
@@ -11,6 +11,8 @@
         "Python",
         "CLI",
         "SR assistant",
+        "SR Tool",
+        "SR Bot",
         "Twitch",
         "Asyncio",
         "PyQt",
